plugins {
    // Apply the java plugin to add support for Java
    id 'java'
    id 'com.github.johnrengelman.shadow'
    id 'io.franzbecker.gradle-lombok' version '4.0.0'
}

sourceCompatibility = JavaVersion.VERSION_13
targetCompatibility = JavaVersion.VERSION_13
compileJava.options.encoding = 'UTF-8'


shadowJar {
    archiveBaseName.set('Otus')
    archiveVersion.set('0.1')
    archiveClassifier.set('')
    manifest {
        attributes 'Main-Class': 'ru.otus.hw11.DbServiceDemo'
    }
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.6.2'
    testImplementation 'org.assertj:assertj-core:3.16.1'
    testImplementation 'org.mockito:mockito-junit-jupiter:3.3.3'
    implementation 'com.h2database:h2:1.4.185'
    implementation 'ch.qos.logback:logback-classic:0.9.30'
    implementation 'org.hibernate:hibernate-core:5.2.12.Final'
    implementation 'javax.xml.bind:jaxb-api:2.3.1'
    implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.1'

}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
    jvmArgs = ["-Dfile.encoding=UTF-8","-XX:+UseG1GC","-Xmx64m"]
}

task DbServiceDemo(type: JavaExec) {
    group = 'Run' // <-- change the name as per your need
    description = 'Run main method class DbServiceDemo'
    classpath sourceSets.main.runtimeClasspath // <-- Don't change this
    main = "ru.otus.hw11.DbServiceDemo"
    //jvmArgs = ["-Xms1g", "-Xmx1g","-XX:+UseG1GC"/*,"-Xlog:gc*:file=gc.log"*/]
    jvmArgs = ["-Dfile.encoding=UTF-8"]
   //args "arg1", "arg2"
}

task HWCacheDemo(type: JavaExec) {
    group = 'Run' // <-- change the name as per your need
    description = 'Run main method class HWCacheDemo'
    classpath sourceSets.main.runtimeClasspath // <-- Don't change this
    main = "ru.otus.hw11.core.cachehw.HWCacheDemo"
    //jvmArgs = ["-Xms1g", "-Xmx1g","-XX:+UseG1GC"/*,"-Xlog:gc*:file=gc.log"*/]
    jvmArgs = ["-Dfile.encoding=UTF-8"]
    //args "arg1", "arg2"
}



tasks.build.dependsOn tasks.shadowJar